Changes to Flickr::API

1.27_01, 2016-09-21
 * Add Flickr::API::Upload
 * Flickr::API Be more consistent using my ($self, $args,...) = @_; and not shift
 * Flickr::API Change from using $options to $args for consistancy
 * Flickr::API Add upload method
 * Flickr::API add api_type method
 * Flickr::API add api_permissions method
 * Flickr::API stop using "return undef;"
 * Flickr::API::Response Be more consistent using my ($self, $args,...) = @_; and not shift

1.27, 2015-12-02 
 * Get Flickr::API::People into shape for the Tools.
 * Added some methods for asking about a people object's
   calling user and searched user.

1.26, 2015-11-17
 * Removed references to oauth_token and oauth_token_secret since they
   are redundant.
 * Get some spelling consistent
 * Tidy up a test script

1.25, 2015-10-12
 * Realizing that there is benefit to keeping Flickr::API as close to
   perl core as practical and letting Flickr::Tools use Moo and more
   abstraction, stopped moving all of Flickr::Tools into Flickr::API.
*  Moved Person.pm and Types.pm to Flickr::Tools.
*  Bumped version by five to keep it ahead of Tools, at least for
   the time being.

1.20, 2015-10-05
 * moved Cameras.pm, Reflection.pm and People.pm  to new 
   status reporting.
 * Added Person.pm for the flickr.people methods other than finds
 * Added tests for Person.pm
 * Updated the MANIFEST
 * Add tests to 02-oauth_api.t for new script and for private method
 * Added Types.pm to define types for Moo types
 * Consider splitting the Tools back into a separate distribution 
   so Moo isn't required for the base API.

1.19, 2015-09-16
 * adding Flickr::API::People for the flickr.people methods that find
 * adding t/09-people.t to test People module
 * fixed Reflection.pm for argument lists that are only 1 deep.
 * added test to 07-reflection for method that does not have argument
   array, but rather just a single argument 
 * moved flickr deprecated authentication from $api->{flickr} to